crucible-concurrency/examples/cbl/branch.out.good
[Crux] Attempting to prove verification conditions.
[Crux] Found counterexample for verification goal
[Crux]   examples/cbl/branch.cbl:33:5: error: in t1
[Crux]   Bad assertion, admittedly
